--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-  "name": "usmanhalalit/pixie",
+  "name": "kamanacademy/pixie",
   "description": "A lightweight, expressive, framework agnostic query builder for PHP.",
   "homepage": "https://github.com/usmanhalalit/pixie",
   "keywords": [
